--- a/css/resume.css
+++ b/css/resume.css
@@ -72,7 +72,8 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #BD5D38;
+  /* background-color: #BD5D38; */
+  background-color:  #1A797E;
 }
 
 .dev-icons {
@@ -80,7 +81,8 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: #BD5D38;
+  /* color: #BD5D38; */
+  color: #1A797E
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -176,17 +178,23 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  /* background-color: #BD5D38 !important; */
+  /* background-color: #482C3A !important; */
+  background-color: #291921 !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  /* color: #BD5D38 !important; */
+  /* color: #482C3A !important; */
+  color: #692F69 !important;
 }
 
 a {
-  color: #BD5D38;
+  /* color: #BD5D38; */
+  color: #482C3A;
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  /* color: #824027; */
+  color: #1A797E;
 }
